--- a/myexten/popup.html
+++ b/myexten/popup.html
@@ -1,11 +1,15 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html>
+
     <head>
+      <script src="popup.js"></script>
       <title>Open Extension</title>
-      <script type="text/javascript" src="popup.js"></script>
     </head>
     <body>
-
-      <button id="button">click</button>
+        <div style="width: 200px;">
+            <button id="button">click for log</button>
+            <div id="IsOutput"></div>
+        </div>
+        
     </body>
   </html>
