fixed showLog feature

--- a/myExtension/popup.html
+++ b/myExtension/popup.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html ng-app="myExtension" ng-csp>
     <head>
         <style type="text/css">
@@ -56,7 +56,7 @@
                 Here you can find the all details , For details click on button
             </div>
             <div style="padding:  10px 0 ; text-align: right; ">
-                <a target="_black" href="showLogs.html" id="button">Click for log</a>
+                <a target="_black" href="showLogs.html" id="button">dashboard</a>
             </div>
            
             <div class="notesStatus" id="notesStatus"></div>
@@ -67,6 +67,8 @@
                     <div>{{pageInfo.url}}</div>
                 </li>                       
             </ul>-->
+
+            
         </div>
 
     </body>
