--- a/myExtension/popup.html
+++ b/myExtension/popup.html
@@ -1,27 +1,76 @@
 <!DOCTYPE html>
 <html ng-app="myExtension" ng-csp>
     <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
         *{
-          font-size: 13px;
+          font-size: 12px;
+          box-sizing: border-box;
         }
         a{
-          padding: 7px 10px;  
+          padding: 5px 10px;
           text-decoration: none;
           background-image: linear-gradient(to right, #cb4eff , #6242e8);
           transition: 0.5s;  
           color: white;
-          border-radius: 5px;
+          border-radius: 3px;
         }
         a:hover{
           text-decoration: none;
           opacity: 0.7;      
           color: white;    
         }
-        textarea{
+        #popup{
+          margin: 0;
+          padding: 0;
+          width: 400px;
+        }
+        .page-title{
+          font-size: 14px;
+        }
+        .current-detail{
+          background-color: #7b42f5;
+          color: white;
+          padding: 15px;
+          word-wrap: break-word;
+        }
+        .insert-notes{
+          color: #7b42f5;
+        }
+        .insert-notes textarea{
+          border:1px solid #7b42f5;
           width: 100%;
+          margin: 10px 0;
+          padding: 10px;
+          border-radius: 3px;
+        }
+        .btnclass{
+          background-color: #7b42f5;
+          color: white;
+          padding: 5px 10px;
+          border:none;
+          transition: 0.5s;  
+          border-radius: 3px;
+        }
+        .btnclass:hover{
+          opacity: 0.7;  
+        }
+        .to-do-list{
+          border:1px solid #7b42f5;
+          border-radius: 3px;
+          margin-top: 15px;
+          color: #7b42f5;
+          padding: 15px;
+        }
+        .to-do-list input{
+          width: 100%;
+          border:none;
+          background-color: #ebebeb;
+          border-radius: 3px;
+          padding: 10px;
           margin-top: 10px;
-          border:1px solid lightgrey;
+          margin-bottom: 15px;
         }
         .notesStatus{
           color: #21d821;
@@ -43,29 +92,47 @@
         <script src="js/app/popup.js"></script>
     </head>
     <body id="popup">
-
-        <div ng-controller="PageController" style="width: 300px; padding: 10px;">
-            <div><b>Current Page : {{title}}</b></div>
-            <div class="textUrl">{{url}}</div>
-            <hr>
-            <div style="padding-bottom: 10px;">
-                Here you can find the all details , For details click on button
+        <div class="current-detail" ng-controller="PageController">
+            <div class="page-title">
+              Current Page : {{title}}
+            </div>
+            <div class="textUrl">
+              {{url}}
             </div>
         </div>
-        <div style="padding:  10px 0 ; text-align: right; ">
-            <a target="_black" href="showLogs.html" id="button">dashboard</a>
+        <div style="padding: 15px;">
+          <div class="insert-notes" ng-controller="insertNotesController">
+                  <span>Write note for current page:</span>
+                  <textarea id="notes" ng-model="notesObject.text" name="notes" placeholder="Write notes here..." rows="3"></textarea>
+                  <button class="btnclass" ng-click="saveNotes();" id="saveNotes">Save Note</button><br>
+          </div>
+
+          <div class="to-do-list">
+            <span>Task : </span>
+            <input type="text" name="">
+            <span>amount Done (as percentage) : </span>
+            <input type="text" name="">
+            <div style=" text-align: right; ">
+              <button class="btnclass">Submit</button>
+            </div>
+          </div>
+
+            <div style="margin-top: 15px;">
+              <a target="_black" href="showLogs.html" >Go To Dashboard</a>
+              <button class="btnclass">Watch To-Do list</button>
+            </div>
+
+
+
+
+          
+              <!--<p><b>Has Links:</b></p>
+              <ul>
+                  <li ng-repeat="pageInfo in pageInfos">
+                      <div>{{pageInfo.url}}</div>
+                  </li>                       
+              </ul>-->
         </div>
-        <div ng-controller="insertNotesController">
-                <textarea id="notes" ng-model="notesObject.text" name="notes" placeholder="Write notes here..." rows="3"></textarea>
-                <button ng-click="saveNotes();" id="saveNotes">Save</button><br>
-        </div>
-            <!--<p><b>Has Links:</b></p>
-            <ul>
-                <li ng-repeat="pageInfo in pageInfos">
-                    <div>{{pageInfo.url}}</div>
-                </li>                       
-            </ul>-->
-        
 
     </body>
 </html>
