--- a/myExtension/showLogs.html
+++ b/myExtension/showLogs.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html ng-app="myExtension" ng-csp>
     <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     	<style type="text/css">
       	*{
       		font-size: 12px;
       		color: grey;
       	}
         table tbody tr td{
+          border-bottom: 1px solid lightgrey;
+          padding: 15px 15px 15px 0 ;
+          cursor: context-menu;
+        }
+        .word-wrap{
           width: 200px;
           word-wrap: break-word;
-          border-bottom: 1px solid lightgrey;
-          padding: 7px;
         }
-        .urls{
-          max-width: 600px;
+        .url, .title{
+          max-width: 200px;
           white-space: nowrap;
-		  overflow: hidden;
-		  text-overflow: ellipsis;
+    		  overflow: hidden;
+    		  text-overflow: ellipsis;
+        }
+        body {
+          margin: 15px;
+        }
+        /* button recolor */
+        .nav-pills li{
+          list-style-type: none;
+          cursor: pointer;
+          padding: 7px;
+          border-radius: 4px;
+          margin-bottom: 5px;
+        }
+        .nav-pills li:hover{
+          background-color: lightgrey;
+        }
+        .nav-pills .active{
+          background-color: #7b42f5 !important;
+          color: white;
         }
 
       </style>
@@ -29,36 +56,63 @@
         <script src="js/app/popup.js"></script>
     </head>
     <body id="popup">
-        <div ng-controller="showDataController">
-            <button ng-click ="load();">show all Logs</button>
-            <button ng-click ="toDoList();">Show Task</button>
-            <table width="100%">
-            	<thead>
-	                <tr>
-	                    <td>url</td>
-	                    <td>time</td>
-	                    <td>title</td>
-	                    <td>tabID</td>
-	                </tr>
-            	</thead>
-            	<tbody>
-	                <tr ng-repeat ="allLog in allLogs">
-	                    <td>{{ allLog.url}}</td>
-	                    <td>{{allLog.time}}</td>
-	                    <td>{{allLog.title}}</td>
-	                    <td>{{allLog.tabId}}</td>
-	                </tr>
-            	</tbody>
-            </table>
-
-
-            <div ng-repeat ="data in toDoList">
-              <p>{{data.task}} ( {{data.completedWork}} % )</p>
-              <div style="width: 100%; height: 10px; background-color: lightgrey">
-                <div style="width: {{data.completedWork}}%; height: 10px; background-color: #48d848; z-index: 1;"></div>
+        <div ng-controller="showDataController">                        
+        <div class="container">
+          <div class="row" >
+            <div class="col-md-2">
+              <ul class="nav-pills">
+                <li ng-class="{ active: isSet(1) }" ng-click="setTab(1)">
+                    Home
+                </li>
+                <li ng-class="{ active: isSet(2) }" ng-click="setTab(2)">
+                    All Logs
+                </li>
+                <li ng-class="{ active: isSet(3) }" ng-click="setTab(3)">
+                    All Tasks
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-10">
+              <div class="jumbotron" style="background-color: #fcfcfc;">
+                <div ng-show="isSet(1)">
+                   <h1>Home page</h1>
+                    <p>Welcome to the website!</p>
+                   <p><a class="btn btn-primary btn-lg"       role="button">Learn more</a></p>
+                  </div>
+              <div ng-show="isSet(2)">
+                  <h1>All Logs</h1>
+                  <table width="100%">
+                      <thead>
+                          <tr>
+                              <th>URLs</th>
+                              <th>Date and Time</th>
+                              <th>Title/ Search Term</th>
+                              <th>tabID</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr ng-repeat ="allLog in allLogs">
+                              <td  class="url" title="{{ allLog.url}}">
+                                <a href="{{ allLog.url}}">{{ allLog.url}}</a>
+                              </td>
+                              <td >{{allLog.time}}</td>
+                              <td class="title" title="{{allLog.title}}">{{allLog.title}}</td>
+                              <td>{{allLog.tabId}}</td>
+                          </tr>
+                      </tbody>
+                    </table>
+              </div>
+                <div ng-show="isSet(3)">
+                  <h1>All Tasks</h1>
+                  <div ng-repeat ="data in toDoList" style="margin-bottom: 15px;">
+                      <p>{{data.task}} ( {{data.completedWork}} % )</p>
+                      <div style="width: 100%; height: 10px; background-color: lightgrey">
+                        <div style="width: {{data.completedWork}}%; height: 10px; background-color: #48d848; z-index: 1;"></div>
+                      </div>
+                    </div>
               </div>
             </div>
+          </div>
         </div>
-
     </body>
 </html>
